--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+valgrind (1:3.6.1-1) UNRELEASED; urgency=low
+
+  * Migrate to format 3.0 (quilt):
+    - use upstream .tar.bz2 directly;
+    - migrate patches from dpatch to debian/patches/*.
+
+ -- Pierre Habouzit <madcoder@debian.org>  Mon, 09 May 2011 22:34:18 +0200
+
 valgrind (1:3.6.0~svn11254+nmu1) unstable; urgency=medium
 
   * Non-maintainer upload.
