--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,16 @@
 valgrind (1:3.6.1-1) UNRELEASED; urgency=low
 
   * Migrate to format 3.0 (quilt):
-    - use upstream .tar.bz2 directly;
-    - migrate patches from dpatch to debian/patches/*.
+      - use upstream .tar.bz2 directly;
+      - migrate patches from dpatch to debian/patches/*.
   * Add myself to Uploaders.
   * New upstream release (Closes: 622586, 625180).
   * Add patches/0003-prevent-gcc-4.6-warnings-with-valgrind.h.patch to prevent
     warnings about set but unused variables with gcc-4.6.
+  * debian/control:
+      - Bump standards version (no changes needed).
+      - Add VCS-* Headers.
+      - Add Homepage Header.
 
  -- Pierre Habouzit <madcoder@debian.org>  Mon, 09 May 2011 22:34:18 +0200
 
