--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,9 @@ valgrind (1:3.6.1-1) unstable; urgency=low
       - Bump standards version (no changes needed).
       - Add VCS-* Headers.
       - Add Homepage Header.
+  * Lintian fixes:
+      - Add missing ${misc:Depends} in debian/control.
+      - fix debian-rules-ignores-make-clean-error.
 
  -- Pierre Habouzit <madcoder@debian.org>  Mon, 09 May 2011 22:55:27 +0200
 
