--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ valgrind (1:3.6.1-1) unstable; urgency=low
   * Migrate to format 3.0 (quilt):
       - use upstream .tar.bz2 directly;
       - migrate patches from dpatch to debian/patches/*.
+      - valgrind builds twice in a row (Closes: 549554).
   * Add myself to Uploaders.
   * New upstream release (Closes: 622586, 625180).
   * Add patches/0003-prevent-gcc-4.6-warnings-with-valgrind.h.patch to prevent
