--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+valgrind (1:3.6.1-2) UNRELEASED; urgency=low
+
+  * Enable valgrind build on armel (Closes: 592614):
+      - s/arm/armel/ in debian/control;
+      - build for armv7 since valgrind doesn't support older arm CPUs,
+        thanks to Loïc Minier for the implementation details.
+
+ -- Pierre Habouzit <madcoder@debian.org>  Tue, 10 May 2011 19:24:02 +0200
+
 valgrind (1:3.6.1-1) unstable; urgency=low
 
   * Migrate to format 3.0 (quilt):
