--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ valgrind (1:3.6.1-2) UNRELEASED; urgency=low
       - s/arm/armel/ in debian/control;
       - build for armv7 since valgrind doesn't support older arm CPUs,
         thanks to Loïc Minier for the implementation details.
+  * Add 0004-allow-or-quoting-of-strings-in-.valgrindrc.patch to allow parsing
+    of options with spaces in ~/.valgrindrc (Closes: 507236).
 
  -- Pierre Habouzit <madcoder@debian.org>  Tue, 10 May 2011 19:24:02 +0200
 
