--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ valgrind (1:3.6.1-2) UNRELEASED; urgency=low
   * Add 0004-allow-or-quoting-of-strings-in-.valgrindrc.patch to allow parsing
     of options with spaces in ~/.valgrindrc (Closes: 507236).
   * Catch manpages build failures (Closes: 599563) thanks to Stefano Rivera.
+  * Add suppression for __nss_database_lookup leaks in debian.supp
+    (Closes: 598870).
 
  -- Pierre Habouzit <madcoder@debian.org>  Tue, 10 May 2011 19:24:02 +0200
 
