--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,9 @@ valgrind (1:3.6.1-2) UNRELEASED; urgency=low
   * Catch manpages build failures (Closes: 599563) thanks to Stefano Rivera.
   * Add suppression for __nss_database_lookup leaks in debian.supp
     (Closes: 598870).
+  * String things not under /usr/lib/valgrind (Closes: 475562), document into
+    the lintian-overrides why it shouldn't be stripped, namely
+    http://valgrind.org/docs/manual/dist.readme-packagers.html.
 
  -- Pierre Habouzit <madcoder@debian.org>  Tue, 10 May 2011 19:24:02 +0200
 
