--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-valgrind (1:3.6.1-2) UNRELEASED; urgency=low
+valgrind (1:3.6.1-2) unstable; urgency=low
 
   * Enable valgrind build on armel (Closes: 592614):
       - s/arm/armel/ in debian/control;
@@ -12,8 +12,10 @@ valgrind (1:3.6.1-2) UNRELEASED; urgency=low
   * String things not under /usr/lib/valgrind (Closes: 475562), document into
     the lintian-overrides why it shouldn't be stripped, namely
     http://valgrind.org/docs/manual/dist.readme-packagers.html.
+  * Add 0006-workaround-SIGSEGV-on-PPC.patch to workaround PPC SIGSEGV
+    (Closes: 603961).
 
- -- Pierre Habouzit <madcoder@debian.org>  Tue, 10 May 2011 19:24:02 +0200
+ -- Pierre Habouzit <madcoder@debian.org>  Tue, 10 May 2011 23:12:23 +0200
 
 valgrind (1:3.6.1-1) unstable; urgency=low
 
