--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+valgrind (1:3.6.1-3) UNRELEASED; urgency=low
+
+  * update 0002-version.patch to loosen the checks on the arm version
+    (Closes: 592614).
+
+ -- Pierre Habouzit <madcoder@debian.org>  Wed, 11 May 2011 10:09:53 +0200
+
 valgrind (1:3.6.1-2) unstable; urgency=low
 
   * Enable valgrind build on armel (Closes: 592614):
