--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-valgrind (1:3.6.1-3) UNRELEASED; urgency=low
+valgrind (1:3.6.1-3) unstable; urgency=low
 
   * update 0002-version.patch to loosen the checks on the arm version
     (Closes: 592614).
 
- -- Pierre Habouzit <madcoder@debian.org>  Wed, 11 May 2011 10:09:53 +0200
+ -- Pierre Habouzit <madcoder@debian.org>  Thu, 12 May 2011 13:35:29 +0200
 
 valgrind (1:3.6.1-2) unstable; urgency=low
 
