--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+valgrind (1:3.6.1-5) UNRELEASED; urgency=low
+
+  * debian/rules:
+      - use autotools-dev dh_autotools-dev_updateconfig.
+
+ -- Pierre Habouzit <madcoder@debian.org>  Fri, 13 May 2011 14:29:50 +0200
+
 valgrind (1:3.6.1-4) unstable; urgency=low
 
   * Fix patches/0004-allow-or-quoting-of-strings-in-.valgrindrc.patch: out was
