--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+valgrind (1:3.6.99svn11761-1) experimental; urgency=low
+
+  * Package a pre 3.7.0 snapshot (up to r11761 on 20110517).
+  * 3.7.0 comes with a gdbserver features which mitigates the following bugs:
+      - Gdb interactions are simpler and avoid issues due to embedding
+        (Closes: 309406, 270066, 351823)
+      - this comes with better handling of registers (Closes: 576236).
+      - 3.7.0 has a s390x port, so enable it as an architecture and see where
+        it goes.
+
+ -- Pierre Habouzit <madcoder@debian.org>  Tue, 17 May 2011 08:47:28 +0200
+
 valgrind (1:3.6.1-5) UNRELEASED; urgency=low
 
   * debian/rules:
