--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-valgrind (1:3.6.1-5) UNRELEASED; urgency=low
+valgrind (1:3.6.1-5) unstable; urgency=low
 
   * debian/rules:
       - use autotools-dev dh_autotools-dev_updateconfig.
@@ -6,7 +6,7 @@ valgrind (1:3.6.1-5) UNRELEASED; urgency=low
       - use dh 7 to reduce debian/rules cruft.
   * Add armhf to the supported architectures.
 
- -- Pierre Habouzit <madcoder@debian.org>  Fri, 13 May 2011 14:29:50 +0200
+ -- Pierre Habouzit <madcoder@debian.org>  Mon, 23 May 2011 16:00:59 +0200
 
 valgrind (1:3.6.1-4) unstable; urgency=low
 
