--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ valgrind (1:3.6.1-6) unstable; urgency=low
   * debian/patches/0007-implement-extra-dwarf-ops-gcc-461.patch:
     + Added; from upstream r11856, makes valgrind work again with binaries
       built with recent gcc versions (Closes: #632969).
+  * debian/patches/0008-configure-support-linux-3.patch:
+    + Added; from upstream r11796, add support for Linux 3.x to configure
+      script (Closes: #633094).
 
  -- Julien BLACHE <jblache@debian.org>  Fri, 08 Jul 2011 22:28:11 +0200
 
