--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
 valgrind (1:3.7.0-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * refresh 0002-version.patch.
+  * Drop patches merged upstream:
+    - 0005-catch-manpages-errors.patch
+    - 0007-implement-extra-dwarf-ops-gcc-461.patch
+    - 0008-configure-support-linux-3.patch
 
  -- Pierre Habouzit <madcoder@debian.org>  Wed, 21 Dec 2011 16:20:02 +0100
 
