--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-valgrind (1:3.7.0-1) experimental; urgency=low
+valgrind (1:3.7.0-1) unstable; urgency=low
 
   * New upstream release.
   * refresh 0002-version.patch.
