--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ valgrind (1:3.7.0-3) UNRELEASED; urgency=low
 
   * Set myself as maintainer of valgrind, removing Andrés on his request.
     Thanks for the more than 7 years of maintenance Andrés!
+  * Add s390x to the Architecture field (Closes: 640154).
 
  -- Pierre Habouzit <madcoder@debian.org>  Fri, 24 Feb 2012 17:40:24 +0100
 
