--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,9 @@ valgrind (1:3.7.0-3) UNRELEASED; urgency=low
     Thanks for the more than 7 years of maintenance Andrés!
   * Add s390x to the Architecture field (Closes: 640154).
   * Remove s390 that isn't supported upstream anymore.
+  * Make valgrind believe it's cross compiled so that it builds on armel
+    (hopefully), fix configure to deal with gcc version check properly
+    (patches/0006-fix-configure.patch).
 
  -- Pierre Habouzit <madcoder@debian.org>  Fri, 24 Feb 2012 17:40:24 +0100
 
