--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-valgrind (1:3.7.0-3) UNRELEASED; urgency=low
+valgrind (1:3.7.0-3) unstable; urgency=low
 
   * Set myself as maintainer of valgrind, removing Andrés on his request.
     Thanks for the more than 7 years of maintenance Andrés!
@@ -8,7 +8,7 @@ valgrind (1:3.7.0-3) UNRELEASED; urgency=low
     (hopefully), fix configure to deal with gcc version check properly
     (patches/0006-fix-configure.patch).
 
- -- Pierre Habouzit <madcoder@debian.org>  Fri, 24 Feb 2012 17:40:24 +0100
+ -- Pierre Habouzit <madcoder@debian.org>  Tue, 28 Feb 2012 11:28:32 +0100
 
 valgrind (1:3.7.0-2) unstable; urgency=low
 
