--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,4 +1,4 @@
-valgrind (1:3.6.1-5) UNRELEASED; urgency=low
+valgrind (1:3.6.1-5) unstable; urgency=low
 
   Starting with this version /usr/lib/valgrind binaries are stripped which
   saves about 150Mb on amd64 for example.
