--- a/debian/changelog
+++ b/debian/changelog
@@ -66,7 +66,7 @@ valgrind (1:3.6.1-6) unstable; urgency=low
 
  -- Julien BLACHE <jblache@debian.org>  Fri, 08 Jul 2011 22:28:11 +0200
 
-valgrind (1:3.6.1-5) UNRELEASED; urgency=low
+valgrind (1:3.6.1-5) unstable; urgency=low
 
   * debian/rules:
       - use autotools-dev dh_autotools-dev_updateconfig.
