--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 valgrind (1:3.7.0-4) UNRELEASED; urgency=low
 
+  [ Pierre Habouzit ]
+  * Remove myself as a Maintainer, pass the package to Alessandro.
+
+  [ Alessandro Ghedini ]
   * Remove versioned build depends already satisfied in stable
   * Bump Standards-Version to 3.9.3
   * Add debian/watch
