--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-valgrind (1:3.7.0-4) UNRELEASED; urgency=low
+valgrind (1:3.7.0-4) unstable; urgency=low
 
   [ Pierre Habouzit ]
   * Remove myself as a Maintainer, pass the package to Alessandro.
@@ -19,8 +19,12 @@ valgrind (1:3.7.0-4) UNRELEASED; urgency=low
   * Register HTML manual with doc-base
   * Install NEWS as upstream changelog
   * Add Roland to Uploaders
+  * Fix typo in long description (Closes: #643834)
+  * Provide a valgrind-listener manpage
+    - Add 0009-valgrind-listener-manpage.patch
+      Thanks to Cristian Greco (Closes: #632822)
 
- -- Alessandro Ghedini <ghedo@debian.org>  Thu, 10 May 2012 20:10:30 +0200
+ -- Alessandro Ghedini <ghedo@debian.org>  Fri, 11 May 2012 17:09:35 +0200
 
 valgrind (1:3.7.0-3) unstable; urgency=low
 
