--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,3 +1,16 @@
+valgrind (1:3.7.0-5) UNRELEASED; urgency=low
+
+  Valgrind symbols have been stripped since version 1:3.6.1-5 because they take
+  a lot of disk space (cf. #475562). This is not supported by upstream, who
+  recommends to not do so because it may cause problems (e.g. unhelpful error
+  messages).
+
+  From now on, the stripped symbols will be provided in the valgrind-dbg
+  package, which is a compromise of both "use cases" (who wants to avoid
+  problems installs the -dbg package, who wants to save disk space doesn't).
+
+ -- Alessandro Ghedini <ghedo@debian.org>  Wed, 16 May 2012 21:33:18 +0200
+
 valgrind (1:3.6.1-5) unstable; urgency=low
 
   Starting with this version /usr/lib/valgrind binaries are stripped which
