--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,4 +1,4 @@
-valgrind (1:3.7.0-5) UNRELEASED; urgency=low
+valgrind (1:3.7.0-5) unstable; urgency=low
 
   Valgrind symbols have been stripped since version 1:3.6.1-5 because they take
   a lot of disk space (cf. #475562). This is not supported by upstream, who
