--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-valgrind (1:3.7.0-5) UNRELEASED; urgency=low
+valgrind (1:3.7.0-5) unstable; urgency=low
 
   * Build on ppc64 too (Closes: #672481)
   * Update short and long descriptions
@@ -12,8 +12,9 @@ valgrind (1:3.7.0-5) UNRELEASED; urgency=low
   * Add valgrind-dbg package (cf. #475562)
     - valgrind Recommends valgrind-dbg
   * Remove unused lintian overrides
+  * Update debian/copyright using Copyright-Format 1.0
 
- -- Alessandro Ghedini <ghedo@debian.org>  Wed, 16 May 2012 21:39:27 +0200
+ -- Alessandro Ghedini <ghedo@debian.org>  Thu, 17 May 2012 22:03:08 +0200
 
 valgrind (1:3.7.0-4) unstable; urgency=low
 
