--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+valgrind (1:3.7.0-6) unstable; urgency=low
+
+  * Explicitly pass -I/usr/include/$(DEB_HOST_GNU_TYPE) compiler flag
+    (Closes: #676029)
+  * Remove ${shlibs:Depends} from valgrind-dbg depends
+
+ -- Alessandro Ghedini <ghedo@debian.org>  Tue, 05 Jun 2012 12:35:02 +0200
+
 valgrind (1:3.7.0-5) unstable; urgency=low
 
   * Build on ppc64 too (Closes: #672481)
