--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-valgrind (1:3.7.0-7) UNRELEASED; urgency=low
+valgrind (1:3.8.0-1) UNRELEASED; urgency=low
 
+  * New upstream release
   * Fix debian.supp madness (Closes: #661523):
     - Remove python suppressions from debian.supp
       (already provided by the python package)
@@ -7,7 +8,7 @@ valgrind (1:3.7.0-7) UNRELEASED; urgency=low
       (i.e. those matching old libraries)
     - Remove useless suppressions and clean-up remaining
 
- -- Alessandro Ghedini <ghedo@debian.org>  Sat, 14 Jul 2012 19:54:32 +0200
+ -- Alessandro Ghedini <ghedo@debian.org>  Fri, 10 Aug 2012 12:20:39 +0200
 
 valgrind (1:3.7.0-6) unstable; urgency=low
 
