--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-valgrind (1:3.8.0-1) UNRELEASED; urgency=low
+valgrind (1:3.8.0-1) unstable; urgency=low
 
   * New upstream release
     - Increase maximum allowed alignment for memalign (Closes: #489297)
@@ -12,12 +12,11 @@ valgrind (1:3.8.0-1) UNRELEASED; urgency=low
     - Remove useless suppressions and clean-up remaining
   * Update upstream copyright
   * Enable support for mips
-  * Refresh 02_version.patch
   * Drop 06_fix-configure.patch (fixed upstream)
   * Refresh patches
   * Update 07_fix-spelling-in-binary.patch
 
- -- Alessandro Ghedini <ghedo@debian.org>  Fri, 10 Aug 2012 12:20:39 +0200
+ -- Alessandro Ghedini <ghedo@debian.org>  Sat, 11 Aug 2012 14:24:56 +0200
 
 valgrind (1:3.7.0-6) unstable; urgency=low
 
