--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+valgrind (1:3.8.1-1) UNRELEASED; urgency=low
+
+  * New upstream release
+
+ -- Alessandro Ghedini <ghedo@debian.org>  Wed, 19 Sep 2012 18:03:05 +0200
+
 valgrind (1:3.8.0-1) unstable; urgency=low
 
   * New upstream release
