--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+valgrind (1:3.8.1-2) UNRELEASED; urgency=low
+
+  * Bump Standards-Version to 3.9.4 (no changes needed)
+
+ -- Alessandro Ghedini <ghedo@debian.org>  Sun, 23 Sep 2012 19:00:59 +0200
+
 valgrind (1:3.8.1-1) unstable; urgency=low
 
   * New upstream release
