--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 valgrind (1:3.8.1-2) UNRELEASED; urgency=low
 
   * Bump Standards-Version to 3.9.4 (no changes needed)
+  * Quote LD_LIBRARY_PATH in the wrapper script to avoid errors with spaced
+    paths (LP: #880685)
+  * Enable support for mipsel too (Closes: #696850)
 
  -- Alessandro Ghedini <ghedo@debian.org>  Sun, 23 Sep 2012 19:00:59 +0200
 
