--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,12 @@
-valgrind (1:3.8.1-2) UNRELEASED; urgency=low
+valgrind (1:3.8.1-2) unstable; urgency=low
 
   [ Alessandro Ghedini ]
   * Bump Standards-Version to 3.9.4 (no changes needed)
   * Quote LD_LIBRARY_PATH in the wrapper script to avoid errors with spaced
     paths (LP: #880685)
   * Enable support for mipsel too (Closes: #696850)
+  * Add suppression for dlopen() leak when linking with -lpthread
+    (Closes: #700899)
 
   [ Samuel Bronson ]
   * Allow building more than once from the same tree
@@ -14,7 +16,7 @@ valgrind (1:3.8.1-2) UNRELEASED; urgency=low
   * Add 10_unbreak-xinclude-in-manpage.patch to fix a broken XInclude
     (Closes: #696694)
 
- -- Alessandro Ghedini <ghedo@debian.org>  Sun, 23 Sep 2012 19:00:59 +0200
+ -- Alessandro Ghedini <ghedo@debian.org>  Wed, 20 Feb 2013 11:21:07 +0100
 
 valgrind (1:3.8.1-1) unstable; urgency=low
 
