--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+valgrind (1:3.8.1-2pexip1) precise; urgency=low
+
+  * debian/control:
+      - update maintainer info
+
+ -- John-Mark Bell <jmb@pexip.com>  Wed, 01 May 2013 14:58:32 +0100
+
 valgrind (1:3.8.1-2) unstable; urgency=low
 
   [ Alessandro Ghedini ]
