--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+valgrind (1:3.16.1-1pexip1) pexip; urgency=medium
+
+  * Update to 3.16
+
+ -- Huw Jones <huw@pexip.com>  Tue, 10 May 2022 08:42:51 +0100
+
 valgrind (1:3.16.1-1) unstable; urgency=medium
 
   * New upstream release
