--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+valgrind (1:3.18.1-1.1pexip2) pexip-bullseye; urgency=medium
+
+  * Bullseye rebuild for ARM64 inclusion
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Mon, 05 Sep 2022 10:36:13 +0100
+
 valgrind (1:3.18.1-1.1pexip1) pexip-bullseye; urgency=medium
 
   * Move to bookworm version.
