--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+valgrind (1:3.19.0-1pexip1) pexip; urgency=medium
+
+  * New upstream release
+
+ -- Huw Jones <huw@pexip.com>  Tue, 14 Mar 2023 16:18:20 +0000
+
 valgrind (1:3.19.0-1) unstable; urgency=medium
 
   * New upstream release (Closes: #1017791)
