--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+valgrind (1:3.19.0-1pexip3) pexip-bookworm; urgency=medium
+
+  * Initial bookworm build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 16 Nov 2023 10:35:10 +0000
+
 valgrind (1:3.19.0-1pexip2) pexip; urgency=medium
 
   * Rebuild for new libc version.
