--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+valgrind (1:3.19.0-1pexip4) pexip-bookworm; urgency=medium
+
+  * Bookworm build for product distribution
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Sat, 09 Dec 2023 22:58:56 +0000
+
 valgrind (1:3.19.0-1pexip3) pexip-bookworm; urgency=medium
 
   * Initial bookworm build
