New versioning scheme

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+valgrind (1:3.19.0-1+pexip24u5) pexip-bookworm; urgency=medium
+
+  * New versioning scheme
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 01 Feb 2024 16:38:01 +0000
+
 valgrind (1:3.19.0-1pexip4) pexip-bookworm; urgency=medium
 
   * Bookworm build for product distribution
